fixed chat selection and wrapping

--- a/app.css
+++ b/app.css
@@ -546,6 +546,8 @@
     padding-bottom: 6px;
     cursor: text;
     -webkit-user-select: text;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 .d-chat-line {
     display: block;
@@ -558,6 +560,7 @@
     width: 1px;
     margin-right: -1px;
     overflow: hidden;
+    height: 1px;
 }
 .d-chat-username {
     /*font-weight: bold;*/
